wip add/remove watchlist